--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wy-node-demo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "node-demo",
   "main": "index.js",
   "dependencies": {
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/i-smile/node-demo.git"
+    "url": "git+https://github.com/i-smile/wy-node-demo.git"
   },
   "keywords": [
     "demo"
